--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -3,8 +3,8 @@
 }
 
 .marvel-card {
-    width: 35%;
-    height: 45%;
+    width: 30%;
+    height: auto;
     line-height: 30px;
     display: flex;
     flex-direction: column;
@@ -12,8 +12,8 @@
 }
 
 .hero-img {
-    width: 90%;
-    height: 30%;
+    width: 80%;
+    height: auto;
 }
 
 .marvel-hero {
